# vscode_cmake

./: .gitmodules  CMakeLists.txt  CMakePresets.json  main.cpp  main.cu
build2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  vscode_cmake.sln  vscode_cmake.vcxproj  vscode_cmake.vcxproj.filters
build2/Debug/: vscode_cmake.exp  vscode_cmake.ilk  vscode_cmake.lib
build2/Release/: vscode_cmake.exp  vscode_cmake.lib
build2/Win32/Debug/ALL_BUILD/: ALL_BUILD.vcxprojResolveAssemblyReference.cache
build2/Win32/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  custombuild.read.1.tlog  custombuild.write.1.tlog
build2/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.read.1.tlog  (+1 more)
build2/vscode_cmake.dir/Debug/vscode_cmake.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  vscode_cmake.lastbuildstate  vscode_cmake.write.1u.tlog
build2/vscode_cmake.dir/Release/: main.cu-1581383977.deps  main.cu.cache  testCUDA.cu-63965166.deps  testCUDA.cu.cache
build2/vscode_cmake.dir/Release/vscode_cmake.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  vscode_cmake.write.1u.tlog
build2/x64/Debug/ALL_BUILD/: ALL_BUILD.vcxprojResolveAssemblyReference.cache
build2/x64/Release/ALL_BUILD/: ALL_BUILD.vcxprojResolveAssemblyReference.cache
include/: Version.hpp  testH.h
src/: testCUDA.cu  testCUDA.h
(+9 files in other folders)
